<resources>
    <string name="app_name">Scadenzario Veicoli</string>
    <string name="title_activity_mezzo">scadenzario per</string>
    <string name="ita_title_show_info">info per</string>
    <string name="ita_title_show_tagliando">tagliandi per</string>
    <string name="ita_title_show_scadenza">scadenza per</string>
    <string name="action_settings">Settings</string>

    <string name="ita_action_add_mezzo">Aggiungi nuovo mezzo</string>
    <string name="ita_action_add_tagliando">Aggiungi nuovo tagliando</string>
    <string-array name="ita_tipi">
        <item>auto</item>
        <item>moto</item>
        <item>scooter</item>
    </string-array>
    <string name="ita_note">descrizione</string>
    <string name="ita_spesa_tagliando">spesa tagliando</string>
    <string name="ita_selezionata_targa">targa selezionata</string>
    <string name="ita_inserisci_targa">inserisci la targa</string>
    <string name="ita_seleziona_tipo">seleziona il tipo</string>
    <string name="ita_btnNewMezzo">aggiungi nuovo mezzo</string>
    <string name="ita_btnNewTagliando">aggiungi nuovo tagliando</string>
    <string name="ita_aggiungi">aggiungi</string>
    <string name="ita_cancella">cancella</string>
    <string name="ita_info">info</string>
    <string name="ita_scadenze">scadenze</string>
    <string name="ita_tagliandi">tagliandi</string>
    <string name="ita_targa">targa</string>
    <string name="ita_tipo">tipo del mezzo</string>
    <string name="ita_cancella_targa">cancella questo mezzo</string>
    <string name="ita_eliminazione_targa">eliminazione mezzo</string>
    <string name="ita_confermo">confermo</string>
    <string name="ita_annulla">annulla</string>
    <string name="ita_scadenza_assicurazione">scadenza assicurazione</string>
    <string name="ita_scadenza_bollo">scadenza bollo</string>
    <string name="ita_avviso_assicurazione">attivo avviso assicurazione</string>
    <string name="ita_avviso_assicurazione_attivato">avviso assicurazione attivato</string>
    <string name="ita_avviso_bollo">attivo avviso bollo</string>
    <string name="ita_avviso_bollo_attivato">avviso bollo attivato</string>
    <string name="ita_salva">salva</string>
    <string name="ita_message_data_errata">data errata</string>
    <string name="ita_message_eliminazione_targa">se eliminata la targa, sarà eliminato ogni dato ad essa associata, continuare?</string>
    <string name="ita_message_camera_non_presente">camera non presente nel dispositvo</string>
    <string name="title_activity_item_tagliando">ItemTagliandoActivity</string>
    <string name="ita_aggiungi_tagliando_per">aggiungi tagliando per</string>
    <string name="ita_modifica_tagliando_per">modifica tagliando per</string>
    <string name="ita_avviso_impossibile_impostare_allarme">impossibile impostare allarme</string>
    <string name="ita_notifica_scadenza_bollo">targa %1$s scadenza bollo il %2$s</string>
    <string name="ita_notifica_scadenza_assicurazione">targa %1$s scadenza assicurazione il %2$s</string>
</resources>