<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginLeft="@dimen/left_padding_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ita_targa" />

    <EditText
        android:layout_marginLeft="@dimen/left_padding_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTarga"
        android:layout_gravity="left"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:layout_marginLeft="@dimen/left_padding_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ita_tipo" />

    <EditText
        android:layout_marginLeft="@dimen/left_padding_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTipo"
        android:layout_gravity="left"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ita_cancella_targa"
        android:id="@+id/btnElimina"
        android:layout_gravity="center_horizontal" />
</LinearLayout>