<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_column="2"
    android:layout_row="2"
    android:layout_gravity="center"
    android:columnCount="2"
    android:orientation="horizontal"
    tools:context="davidepatrizi.com.scadenzarioauto.MezzoActivity">

    <Button
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_gravity="fill"
        android:minHeight="@dimen/activity_mezzo_minMeasure"
        android:minWidth="@dimen/activity_mezzo_minMeasure"
        android:text="@string/ita_info"
        android:id="@+id/btnInfo"
        android:layout_row="0"
        android:layout_column="0" />

    <Button
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_gravity="fill"
        android:minHeight="@dimen/activity_mezzo_minMeasure"
        android:minWidth="@dimen/activity_mezzo_minMeasure"
        android:text="@string/ita_scadenze"
        android:id="@+id/btnScadenze"
        android:layout_row="0"
        android:layout_column="1" />

    <Button
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_gravity="fill"
        android:minHeight="@dimen/activity_mezzo_minMeasure"
        android:minWidth="@dimen/activity_mezzo_minMeasure"
        android:text="@string/ita_tagliandi"
        android:id="@+id/btnTagliandi"
        android:layout_row="1"
        android:layout_column="0" />
</GridLayout>