
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginLeft="@dimen/left_padding_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ita_selezionata_targa" />

    <EditText
        android:layout_marginLeft="@dimen/left_padding_30"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:id="@+id/txtTarga" />

    <LinearLayout
        android:layout_marginLeft="@dimen/left_padding_30"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtDataTagliando" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="imposta Data"
            android:id="@+id/btnDataTagliando" />
    </LinearLayout>

    <TextView
        android:layout_marginLeft="@dimen/left_padding_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ita_spesa_tagliando"
        android:layout_gravity="center_vertical" />

    <EditText
        android:layout_marginLeft="@dimen/left_padding_30"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSpesaTagliando"
        android:inputType="numberDecimal"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_marginLeft="@dimen/left_padding_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:numeric="decimal"
        android:text="@string/ita_note"
        android:layout_gravity="center_vertical" />

    <EditText
        android:layout_marginLeft="@dimen/left_padding_30"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNote"
        android:layout_gravity="center_vertical" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnManageItem" />
</LinearLayout>
